--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ h1 {
 #calculadora{
     background: white;
     /* Con estas 3 lineas vamos a hacer que los divs queden lado a lado */
-    width: 50%;
-    height: 100%;
+    width: 70%;
+    height: 130%;
     float: left;
 }
 
@@ -47,17 +47,17 @@ h1 {
     padding: 30px;
 }
 input {
-	width: 70%;
-    padding: 12px 15px;
+	width: 50%;
+    padding: 10px 10px;
     border: none;
-    background-color: #eee;
+    background-color: #fffefe;
 }
 
 button {
-  font-size: 15px;
+  font-size: 12px;
 	font-weight: bold;
-	padding: 12px 45px;
-	border-radius: 30px;
+	padding: 9px 15px;
+	border-radius: 15px;
 	background-color: #63a3a0;
 	border: 1px solid #63a3a0;
 	color: #FFFFFF;
